
Wed Sep  1 14:32:11 PDT 1999
(Mandrake)

New ecvs script.  this one automatically builds a changelog for us.
rewrote the whole thing in perl.  some things you'll notice at the top, easy
ways for you to change what your (Mandrake) message in ChangeLog shows up as,
as well as an easy entry point for you to add your own indent style
(see %names and %indents hashes)


-------------------------------------------------------------------------------

Wed Sep  1 14:40:22 PDT 1999
(Mandrake)

a couple of minor bugfixes to ecvs.  now it removes the tempfile CommitLog
as well as remembers to display the cvs commit as it happens.

-------------------------------------------------------------------------------

Wed Sep  1 16:09:21 PDT 1999
(Raster)


-------------------------------------------------------------------------------

Wed Sep  1 16:09:47 PDT 1999
(Raster)


-------------------------------------------------------------------------------

Wed Sep  1 16:10:02 PDT 1999
(Raster)

ok - errant use of the scritp.. this needs to be fixed.. :)

-------------------------------------------------------------------------------

Wed Sep  1 16:34:48 PDT 1999
(Raster)

fixed movign of groups and transients with parents if movemode != opaque

-------------------------------------------------------------------------------

Wed Sep  1 17:04:23 PDT 1999
(Mandrake)

wrote a lot more code into ecvs.  92 lines long just to do some simple
commit checks.

-------------------------------------------------------------------------------

Wed Sep  1 17:07:35 PDT 1999
(Mandrake)

trying this one more time (still working on ecvs)

-------------------------------------------------------------------------------

Wed Sep  1 17:08:51 PDT 1999
(Mandrake)

still more bugs in ecvs.

-------------------------------------------------------------------------------

Wed Sep  1 17:12:17 PDT 1999
(Mandrake)

this is a test commit, to make sure everything works again.